home page calendar content overflow fix

--- a/src/styles/eventCard.css
+++ b/src/styles/eventCard.css
@@ -51,6 +51,12 @@
   display: flex;
   flex-direction: column;
   padding-top: 60px;
+    overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5; 
+  -webkit-box-orient: vertical;
+  line-height: 20px;
 }
 
 .card-item-date {
@@ -73,6 +79,12 @@
   font-family: "Inter", sans-serif;
   margin:0;
   padding: 10px 20px 0 0;
+    overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; 
+  -webkit-box-orient: vertical;
+  line-height: 22px;
 }
 
 .cards-container p{
